--- a/vignettes/quickstart.Rmd
+++ b/vignettes/quickstart.Rmd
@@ -21,15 +21,10 @@ The hypegrammaR package implements the [IMPACT quantitative data analysis guidel
 ## What you need:
 get all your files in csv format first:
 
-### 1. The simplest case (simple random sampling, no labels, no skiplogic, no special handling of select_multiple questions)
   - your data as a csv file
+  - your sampling frame(s) as csv file(s) if the analysis needs to be weighted
   
-### 2. For stratified/cluster sampling:
-  - your sampling frame(s) as csv file(s)
-  
-### 3. To analyse select_multiple, to add labels and to correctly analyse skiplogic:
-  - your kobo questionnaire questions sheet if you have it
-  - your kobo questionnaire choices sheet if you have it
+  - your kobo questionnaire questions and choices sheets as two csv files; Necessary if you have select_multiple questions, skip logic or want to use the labels.
 
 
 
@@ -39,37 +34,74 @@ get all your files in csv format first:
 > - questionnaire names unchanged
 > - xml values (NOT labeled)
 > - select_multiple questions have one column with all responses concatenated (separated by blank space " "), and one column for each response named [question name].[choice name]
+>
+> Your sampling frame must be in the correct format:
+>
+> - must have one row per stratum; one column for population numbers; one column for strata names
+> - The values in the column with the strata names must appear exactly identical in a column in the data
 
 ## Preparation
 #### Install the hypegrammaR package
-Run this only once:
+This line you only have to run _once_ when using hypegrammaR for the first time, or to update to a new version.
 ```{r,eval=F}
-remotes::install_github("mabafaba/hypegrammaR")
+remotes::install_github("mabafaba/hypegrammaR",build_opts = c())
 ```
+(the `build_opts = c()` makes sure the package includes all extra help pages & documentation)
+For this step only, you need a more or less stable internet connection.
 
 #### Load the hypegrammaR package
 ```{r,warning=FALSE,message=FALSE}
 library(hypegrammaR)
-
 ```
 
 #### Load your files
 
 All input files are expected as csv files.
+You must use the hypegrammar `load_*()` functions.
 
-Each input we usually expect with an assessment has it's own function to load it. They check that the format is in line with what is expected, make sure they play well with each other and prepare the functionality they are used for.
-
-First the data. A csv file with data in standard Kobo format.
+##### The data
+`load_data` takes only one argument `file`, the path to the csv file. 
 ```{r}
 assessment_data<-load_data(file = "../tests/testthat/data.csv")
 ```
+Conditions:
 
-Then a sampling frame. A csv file with one column with strata names, one column with population numbers. The strata names must match exactly some values in the data. We must tell the loading function which column is what in the sampling frame.
+- it must adhere to standard kobo xml format
+- it must _not_ contain labeled values
+- it must have a _single_ row for column headers (unchanged as they come out of kobo)
+- it may contain additional columns that were not in the original questionnaire. It is good practice to additional new variables as additional rows to the questionnaire, specifying variable type, choices etc.
+
+##### Load the sampling frame
+
+This is only necessary if the analysis needs to be weighted.
+
+The sampling frame should be a csv file with one column with strata names, one column with population numbers.
+`load_samplingframe` takes only one argument `file`, the path to the csv file. 
+
 ```{r}
-sampling_frame<-load_samplingframe("../tests/testthat/test_samplingframe.csv")
+
+sampling_frame<-load_samplingframe(file = "../tests/testthat/test_samplingframe.csv")
+head(sampling_frame)
 ```
 
+Now turn your sampling frame into a weighting function with `map_to_weighting`. We see that the relevant columns in the sampling frame are called "strata names" and "population". The column in the data correspoinding to the strata names is called "stratification" in this data set. We need to supply these column names as arguments to `map_to_weighing`:
+
+```{r}
+myweighter<-map_to_weighting(sampling_frame,data.stratum.column = "stratification",
+                             sampling.frame.population.column = "population",
+                             sampling.frame.stratum.column = "strata names")
+```
+
+##### The Questionnaire
 Finally the questionnaire, which depends on the question and the choices sheet as a csv.
+hypegrammaR can live without this, but a questionnaire is necessary for correct analysis of select_multiple questions.
+
+The parameters are:
+
+- `data`: the object that stores the data loaded above
+- `questions.file`: the path to the questions sheet as a csv file
+- `choices.file` the path to the choices sheet as a csv file
+- `choices.label.column.to.use`: the exact name of the column containing the labels that should be used. You can add an extra column with custom labels to your choices sheet if you don't want to use the choice labels from the original questionnaire
 
 ```{r}
 
@@ -80,103 +112,71 @@ questionnaire<-load_questionnaire(data = assessment_data,
                                              )
 
 ```
+Conditions:
 
+- Both the choices and questions csv files should be exact copies of the respective sheets in the kobo xml form (except for the additions mentioned above.)
 
-### Preparation
+### Analysis
 
-Install the hypegrammaR package (this line you only have to run _once_ when using hypegrammaR for the first time, or to update to a new version):
-```{r, eval=F,echo=T,message=F,warning=FALSE,error=F}
-devtools::install_github("mabafaba/hypegrammaR",build_opts = c())
-```
-(the `build_opts = c()` makes sure the package includes extra help pages & documentation)
+#### Identify your analysis parameters
 
-Load the hypegrammaR package:
-```{r, eval=T,echo=T,message=F,warning=FALSE,error=F}
-# library(hypegrammaR)
-```
-
-Load the data:
-```{r load, eval=T}
-mydata<-read.csv("../tests/testthat/data.csv")
-```
-
-### Run the analysis
-
-Identify your analysis parameters.
-
-- what is are the dependent and independent variables, and what are their data types?
-    - this Example: "nutrition_need" (numerical) and "region" (categorical)
-- what is your sampling strategy?
-    - this Example: simple random = not stratified, not clustered
+- what are the column headers of your dependent and independent variables, and what are their data types?
+    - this Example: *"assistancereceived" (categorical)* and *"informalsettlement" (categorical)*
 - what type of hypothesis do you have?
-    - this Example: the difference between groups
+    - this Example: the *difference between groups*
 
+#### map to the analysis case
+For this example, our hypothesis is that households in informal settlements received different assistance compared to non-informal settlements.
 
-Now we can use the function `analyse_indicator` with the above as parameters:
-
-
-You can find out what exactly you can/should enter for these parameters by running `?analyse_indicator`, which will open the help page for the function (this works for any function)
-
-
-### See the results
-
-The `analyse_indicator` function gives you a number of things:
-
-- A log message
-- Meta information: a log of your inputs, what analysis case was used etc.
-- The summary statistics (e.g. averages, percentages, ...)
-- The hypothesis test results
-- A visualisation
-
-#### The log message
-
-First, a message telling you how it went:
-```{r}
-# result$message
-```
-That's what we want to see. If something went wrong, it should tell you here what happened.
-
-#### meta information
 
 ```{r}
-# result$parameters
+my_case<-map_to_case(hypothesis.type = "group_difference",
+                  dependent.var.type = "categorical",
+                  independent.var.type =  "categorical")
+
+
 ```
-As you can see, it remembers what your input parameters were. It also added a standardised name of the analysis case.
 
-#### The summary statistic
 
+You can find out what exactly you can/should enter for these parameters by running `?map_to_case`, which will open the help page for the function (this works for any function)
+
+#### Run the analysis
+
+Now you use the inputs loaded above to an analysis result:
 ```{r}
-# result$summary.statistic
-```
 
-In this case, "numbers" are averages, because the input variable was numerical. `min` and `max` is the corresponding confidence interval. `dependent.var.value` give the corresponding variable values if they are categorical (`NA` otherwise.)
-The summary statistic will _always_ be organised with exactly these columns, no matter what analysis you did. This is so that if you add a new visualisations or ouput format, it will work for any output from this function.
+assistance_informal_settlements<-map_to_result(data = assessment_data,
+                      dependent.var = "assistancereceived",
+                      independent.var = 'informalsettlement',
+                      case = my_case,
+                      weighting = myweighter,
+                      questionnaire = questionnaire)
 
-#### The hypothesis test
-
-Next, there's information on which (if any) hypothesis test was used and the p value:
-```{r}
-# result$hypothesis.test
 
 ```
-ou'll probably be most interested in the p-value and the type of test that was used.
 
-#### The visualisation
+## Show Results
 
-Finally, it returned a _plot function_ that is appropriate to visualise the type of analysis that was performed:
+First, we add labels to the result (assuming that you've loaded a questionnaire):
 
 ```{r, warning=F}
-# myvisualisation<-map_to_visualisation(result)
+assistance_informal_settlements<-map_to_labeled(result = assistance_informal_settlements,
+                                                questionnaire = questionnaire)
+```
+
+Finally, we can get visualisations, tables etc.:
 
 
+```{r, warning=F}
+debug(map_to_visualisation)
+chart<- map_to_visualisation(assistance_informal_settlements)
+table<-map_to_table(assistance_informal_settlements)
+result$summary.statistic
+chart
+table
 
 ```
 
-For advanced users (that know ggplot): The visualisation function returns a ggplot object, so you can add/overwrite ggplot stuff; for example:
-```{r,warning=F}
-# myvisualisation+coord_polar()
-
-```
 
 ### Save/export the results
 To save/export any results, you can use the generic `map_to_file` function. For example:
